--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <div id="incorrect"><p></p></div>
                 <div id="timeup"><p></p></div>
             </div>
+            <div id="startOverButton"><button id="startOver">Start Over?</button></div>
             <div id="buttonBox">
                 <div class="answerDiv"><button class="button" value=0 id="answer1">Answer 1</button></div>
                 <div class="answerDiv"><button class="button" value=1 id="answer2">Answer 2</button></div>
